--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
           package="info.ishared.android"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="17"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <uses-sdk android:minSdkVersion="7"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.NoTitleBar"
+                 android:screenOrientation="portrait">>
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
