--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.NoTitleBar"
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+                 android:theme="@android:style/Theme.NoTitleBar"
                  android:screenOrientation="portrait">>
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
@@ -13,5 +14,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service android:name=".service.FirewallService">
+            <intent-filter>
+                <action android:name=".service.FirewallService"/>
+            </intent-filter>
+        </service>
     </application>
 </manifest>
