--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,4 +22,5 @@
     </application>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"></uses-permission>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 </manifest>
