--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
             </intent-filter>
         </activity>
         <activity  android:name=".activity.SettingActivity"></activity>
+        <activity android:name=".activity.ViewBlockLogActivity"/>
         <service android:name=".service.FirewallService">
             <intent-filter>
                 <action android:name=".service.FirewallService"/>
