--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
         </activity>
         <activity  android:name=".activity.SettingActivity"></activity>
         <activity android:name=".activity.ViewBlockLogActivity"/>
+        <activity android:name=".activity.ContactsListActivity"/>
         <service android:name=".service.FirewallService">
             <intent-filter>
                 <action android:name=".service.FirewallService"/>
